# Note_keeper

./: .gitignore  README.MD  app_w_comments.py  application.py  application_test.yaml  core.py  notekeeper.py  notekeeperapp.py  pyproject.toml  records.yaml  storage.py  test_application.py  test_assets.py  test_core.py  test_storage.py
